--- a/src/content/pages/404.md
+++ b/src/content/pages/404.md
@@ -1,5 +1,5 @@
 ---
-title: "Something Went Wrong!"
+title: "¿Te has perdido?"
 ---
 
-This page doesn't exist or has been removed, <br /> we suggest you go back to Home.
+Esta página no existe.
