deberia ser estable

--- a/src/content/pages/404.md
+++ b/src/content/pages/404.md
@@ -1,5 +1,5 @@
 ---
-title: "¿Te has perdido?"
+title: "Something Went Wrong!"
 ---
 
-Esta página no existe.
+This page doesn't exist or has been removed, <br /> we suggest you go back to Home.
