--- a/src/content/pages/intranet.mdx
+++ b/src/content/pages/intranet.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Login"
+title: "Secured Intranet"
 meta_title: ""
 description: "this is meta description"
 draft: false
 ---
 
-<div data-netlify-identity-menu></div><div data-netlify-identity-button>Login</div>
+
+hola!
