--- a/src/content/pages/login.mdx
+++ b/src/content/pages/login.mdx
@@ -5,4 +5,4 @@ description: "this is meta description"
 draft: false
 ---
 
-<div data-netlify-identity-menu></div><div data-netlify-identity-button>Login</div>
+<div data-netlify-identity-menu></div><div data-netlify-identity-button></div>
